--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Demo GH</title>
 	<link rel="stylesheet" type="text/css" href="stylegh.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -13,4 +14,7 @@
 		<span>Tư Vấn</span>
 		<span>Tài Khoản</span>
 	</div>
+
+    <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_lG1yLUXkLx.json" background="transparent"  speed="1"  style="width: 800px; height: 800px; margin: auto;" loop autoplay></lottie-player>
+    
 </body>
